# caecrack

./: Cargo.toml  LICENCE  README.md  install.sh
.github/workflows/: Linux-Latest.yml  MacOS-Latest.yml  Windows-Latest.yml  rust.yml
src/: cli.yaml  main.rs
