[package]
name = "caecrack"
version = "0.1.0"
authors = ["mksipe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
linecount = "0.1.0"
indicatif = {version = "*", features = ["rayon"]}

[profile.dev]
opt-level = 3